# POLY-TRADER

./: .env.example  .gitignore  README.md
docs/brain/: implementation_plan.md  task.md  walkthrough.md
execution/: cpp_router.cpp
execution/boreal_audit/: Cargo.toml
execution/boreal_audit/src/: main.rs
execution/dtk/: Cargo.toml
execution/dtk/src/: main.rs
execution/dtk/src/bcore/: memory.rs  sequencer.rs
execution/dtk/src/bcore/decision_vm/: interpreter.rs
execution/dtk/src/bcore/features/: fixed_point.rs
execution/dtk/src/bcore/feed/: tick.rs
execution/dtk/src/bcore/ingest/: ring_buffer.rs  ws_feed.rs
execution/dtk/src/bcore/ledger/: capture.rs
execution/dtk/src/bcore/net/: mtls_config.rs
execution/dtk/src/bcore/oracle/: fixed_oracle.rs
execution/dtk/src/bcore/signing/: hsm_signer.rs
execution/dtk/src/bcore/telemetry/: histogram.rs  perf_counter.rs
execution/replay/: Cargo.toml
execution/replay/src/: main.rs
hardware/formal/: boreal_clamp.sby  sva_assertions.sv
hardware/sim/: tb_boreal_clamp.sv  tb_bsb.sv  tb_token_bucket.sv
hardware/src/: boreal_dual_clamp.sv  bsb_core.sv  heab_gate.sv  token_bucket.sv  war_machine_v4_apex.sv
ops/: apex-oracle.service  poly-oracle.service  poly-sniper.service  setup_h100.sh  setup_ubuntu.sh
oracles/: apex_oracle.py  mc_simulation.py  poly_oracle.py
oracles/backtest/: replay_backtest.py
oracles/microstructure/: fee_model.py  fill_model.py  slippage_model.py
poly_sniper/: Cargo.toml
poly_sniper/src/: main.rs
