[package]
name = "poly_sniper"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
zmq = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ethers = { version = "2.0.10", features = ["ws", "rustls"] }
eyre = "0.6"
dotenv = "0.15"
