[package]
name = "dtk"
version = "2.0.0"
edition = "2021"

[dependencies]
# Async runtime (ingest thread)
tokio            = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util      = "0.3"

# Lock-free ring buffer
crossbeam        = "0.8"

# Cryptographic audit
sha2             = "0.10"
hex              = "0.4"

# Serialization (JSON Binance frames)
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"

# CPU pinning
libc             = "0.2"

# TLS (mTLS, Tier 5)
rustls           = "0.23"

[profile.release]
opt-level        = 3
lto              = true
codegen-units    = 1
panic            = "abort"
